--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-client = "0.1.0"
-e2e = "0.1.0"
-wallet = "0.1.0"
-nd-grpc-tonic-client = "0.3.0"
+client = "0.1.1-beta1" 
+lnd-grpc-tonic-client = "0.3.0"
 tonic_lnd = "0.5.1"
