--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 client = "0.1.1-beta1" 
 lnd-grpc-tonic-client = "0.3.0"
 tonic_lnd = "0.5.1"
+
+[crate.workspace]
+members = [
+    "client",
+    "lnd-grpc-tonic-client",
+    "tonic_lnd",
+]
