--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 client = "0.1.1-beta1" 
 lnd-grpc-tonic-client = "0.3.0"
+reqwest = "0.12.5"
 tonic_lnd = "0.5.1"
 
 [crate.workspace]
