--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lnd-grpc-tonic-client = "0.3.0"
 reqwest = "0.12.7"
 tonic_lnd = "0.5.1"
 webpki = "0.22.2"
+sha2 = "0.10.8"
 
 [crate.workspace]
 members = [
