--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ description = "Rust L402 Client"
 license = "MIT"
 repository = "https://github.com/AreaLayer/rust-l402"
 homepage = "https://www.arealayer.net/products"
-tags = ["rust", "lnd", "grpc", "tonic", "client", "bitcoin", "lightning"]
 version = "0.1.3-beta"
 edition = "2021"
 
@@ -16,6 +15,9 @@ tonic_lnd = "0.5.1"
 webpki = "0.22.2"
 sha2 = "0.10.8"
 nostr = "0.34.0"
+
+[package.metadata]
+tags = ["rust", "lnd", "grpc", "tonic", "client", "bitcoin", "lightning"]
 
 [crate.workspace]
 members = [
