--- a/nostr/Cargo.toml
+++ b/nostr/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lnd_grpc_tonic_client = "0.3.0"
+lnd-grpc-tonic-client = "0.3.0"
 nostr = "0.34.1"
