--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Rust L402 Client"
 license = "MIT"
 repository = "https://github.com/AreaLayer/rust-l402"
 homepage = "https://www.arealayer.net/projects"
-version = "0.1.3-beta"
+version = "2.0.0-beta.rc1"
 edition = "2021"
 
 [dependencies]
