--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tonic_lnd = "0.5.1"
 webpki = "0.22.4"
 sha2 = "0.10.8"
 nostr = "0.35.0"
+tonic = "=0.12.2"
 
 [package.metadata]
 tags = ["rust", "lnd", "grpc", "tonic", "client", "bitcoin", "lightning"]
