--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ sha2 = "0.10.8"
 nostr = "0.41.0"
 tokio = "1.42.0"
 idna = "1.0.0"
+tonic = "=0.13.1"
 
 [package.metadata.docs.rs]
 all-features = true
