--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,6 @@ rustdoc-args = ["--cfg", "docsrs"]
 tags = ["rust", "lnd", "grpc", "tonic", "client", "bitcoin", "lightning"]
 
 
-[[bin]]
-name = "rust_l402d"
-path = "bin/rust_l402d.rs"
+[lib]
+name = "rust_l402"
+path = "src/lib.rs"
